@@ -1,45 +1,189 @@
 module Irc
 
   require 'yaml'
+  require 'rbot/messagemapper'
+
+  class BotConfigItem
+    attr_reader :type
+    attr_reader :desc
+    attr_reader :key
+    attr_reader :values
+    def initialize(key, params)
+      @key = key
+      if params.has_key? :default
+        @default = params[:default]
+      else
+        @default = false
+      end
+      @desc = params[:desc]
+      @type = params[:type] || String
+      @values = params[:values]
+      @on_change = params[:on_change]
+    end
+    def default
+      if @default.class == Proc
+        @default.call
+      else
+        @default
+      end
+    end
+    def on_change(newvalue)
+      return unless @on_change
+      @on_change.call(newvalue)
+    end
+  end
 
   # container for bot configuration
   class BotConfig
+    class Enum
+    end
+    class Password
+    end
+    class Boolean
+    end
+    
+    attr_reader :items
+    @@items = Hash.new
+    
+    def BotConfig.register(key, params)
+      unless params.nil? || params.instance_of?(Hash)
+        raise ArgumentError,"params must be a hash"
+      end
+      raise ArgumentError,"params must contain a period" unless key =~ /^.+\..+$/
+      @@items[key] = BotConfigItem.new(key, params)
+    end
 
     # currently we store values in a hash but this could be changed in the
     # future. We use hash semantics, however.
+    # components that register their config keys and setup defaults are
+    # supported via []
+    def [](key)
+      return @config[key] if @config.has_key?(key)
+      return @@items[key].default if @@items.has_key?(key)
+      return false
+    end
+    
+    # pass everything through to the hash
     def method_missing(method, *args, &block)
       return @config.send(method, *args, &block)
+    end
+
+    def handle_list(m, params)
+      modules = []
+      if params[:module]
+        @@items.each_key do |key|
+          mod, name = key.split('.')
+          next unless mod == params[:module]
+          modules.push name unless modules.include?(name)
+        end
+        if modules.empty?
+          m.reply "no such module #{params[:module]}"
+        else
+          m.reply "module #{params[:module]} contains: " + modules.join(", ")
+        end
+      else
+        @@items.each_key do |key|
+          name = key.split('.').first
+          modules.push name unless modules.include?(name)
+        end
+        m.reply "modules: " + modules.join(", ")
+      end
+    end
+
+    def handle_get(m, params)
+      key = params[:key]
+      unless @@items.has_key?(key)
+        m.reply "no such config key #{key}"
+      end
+      value = self[key]
+      if @@items[key].type == :array
+        value = self[key].join(", ")
+      elsif @@items[key].type == :password && !m.private
+        value = "******"
+      end
+      m.reply "#{key}: #{value}"
+    end
+
+    def handle_desc(m, params)
+      key = params[:key]
+      unless @@items.has_key?(key)
+        m.reply "no such config key #{key}"
+      end
+      m.reply "#{key}: #{@@items[key].desc}"
+    end
+
+    def handle_unset(m, params)
+      key = params[:key]
+      unless @@items.has_key?(key)
+        m.reply "no such config key #{key}"
+      end
+      @config.delete(key)
+      handle_get(m, params)
+    end
+
+    def handle_set(m, params)
+      key = params[:key]
+      value = params[:value].to_s
+      unless @@items.has_key?(key)
+        m.reply "no such config key #{key}"
+      end
+      item = @@items[key]
+      puts "item type is #{item.type}"
+      case item.type
+        when :string
+          @config[key] = value
+        when :password
+          @config[key] = value
+        when :integer
+          @config[key] = value.to_i
+        when :float
+          @config[key] = value.to_f
+        when :array
+          @config[key] = value.split(/,\s*/)
+        when :boolean
+          if value == "true"
+            @config[key] = true
+          else
+            @config[key] = false
+          end
+        when :enum
+          unless item.values.include?(value)
+            m.reply "invalid value #{value}, allowed values are: " + item.values.join(", ")
+            return
+          end
+          @config[key] = value
+        else
+          puts "ACK, unsupported type #{item.type}"
+          exit 2
+      end
+      item.on_change(@config[key])
+      m.okay
     end
 
     # bot:: parent bot class
     # create a new config hash from #{botclass}/conf.rbot
     def initialize(bot)
       @bot = bot
-      # some defaults
       @config = Hash.new(false)
-      
-      @config['server.name'] = "localhost"
-      @config['server.port'] = 6667
-      @config['server.password'] = false
-      @config['server.bindhost'] = false
-      @config['server.reconnect_wait'] = 5
-      @config['irc.nick'] = "rbot"
-      @config['irc.user'] = "rbot"
-      @config['irc.join_channels'] = ""
-      @config['core.language'] = "english"
-      @config['core.save_every'] = 60
-      @config['keyword.listen'] = false
-      @config['auth.password'] = ""
-      @config['server.sendq_delay'] = 2.0
-      @config['server.sendq_burst'] = 4
-      @config['keyword.address'] = true
-      @config['keyword.listen'] = false
-      @config['http.proxy'] = false
-      @config['http.proxy_include'] = false
-      @config['http.proxy_exclude'] = false
-      @config['http.proxy_user'] = false
-      @config['http.proxy_pass'] = false
 
+      # respond to config messages, to provide runtime configuration
+      # management
+      # messages will be:
+      #  get (implied)
+      #  set
+      #  unset
+      #  and for arrays:
+      #    add
+      #    remove
+      @handler = MessageMapper.new(self)
+      @handler.map 'config list :module', :action => 'handle_list',
+                   :defaults => {:module => false}
+      @handler.map 'config get :key', :action => 'handle_get'
+      @handler.map 'config desc :key', :action => 'handle_desc'
+      @handler.map 'config describe :key', :action => 'handle_desc'
+      @handler.map 'config set :key *value', :action => 'handle_set'
+      @handler.map 'config unset :key', :action => 'handle_unset'
+      
       # TODO
       # have this class persist key/values in hash using yaml as it kinda
       # already does.
@@ -83,6 +227,10 @@ module Irc
         file.puts @config.to_yaml
       end
     end
+
+    def privmsg(m)
+      @handler.handle(m)
+    end
   end
 
   # I don't see a nice way to avoid the first start wizard knowing way too
@@ -104,37 +252,31 @@ module Irc
       @questions = [
         {
           :question => "What server should the bot connect to?",
-          :prompt => "Hostname",
           :key => "server.name",
           :type => :string,
         },
         {
           :question => "What port should the bot connect to?",
-          :prompt => "Port",
           :key => "server.port",
           :type => :number,
         },
         {
           :question => "Does this IRC server require a password for access? Leave blank if not.",
-          :prompt => "Password",
           :key => "server.password",
           :type => :password,
         },
         {
           :question => "Would you like rbot to bind to a specific local host or IP? Leave blank if not.",
-          :prompt => "Local bind",
           :key => "server.bindhost",
           :type => :string,
         },
         {
           :question => "What IRC nickname should the bot attempt to use?",
-          :prompt => "Nick",
           :key => "irc.nick",
           :type => :string,
         },
         {
           :question => "What local user should the bot appear to be?",
-          :prompt => "User",
           :key => "irc.user",
           :type => :string,
         },
@@ -146,7 +288,6 @@ module Irc
         },
         {
           :question => "Which language file should the bot use?",
-          :prompt => "Language",
           :key => "core.language",
           :type => :enum,
           :items => Dir.new(Config::DATADIR + "/languages").collect {|f|
@@ -155,7 +296,6 @@ module Irc
         },
         {
           :question => "Enter your password for maxing your auth with the bot (used to associate new hostmasks with your owner-status etc)",
-          :prompt => "Password",
           :key => "auth.password",
           :type => :password,
         },
@@ -181,9 +321,9 @@ module Irc
             puts "valid values are: " + q[:items].join(", ")
           end
           if (defaults.has_key?(key))
-            print q[:prompt] + " [#{defaults[key]}]: "
+            print q[:key] + " [#{defaults[key]}]: "
           else
-            print q[:prompt] + " []: "
+            print q[:key] + " []: "
           end
           response = STDIN.gets
           response.chop!
